@@ -1,7 +1,7 @@
 /*
    Copyright (C) 1991-2002, The Numerical Algorithms Group Ltd.
    All rights reserved.
-   Copyright (C) 2007-2010, Gabriel Dos Reis.
+   Copyright (C) 2007-2013, Gabriel Dos Reis.
    All rights reserved.
 
    Redistribution and use in source and binary forms, with or without
@@ -350,8 +350,8 @@ accept_menu_server_connection(HyperDocPage *page)
             continue;
         }
 
-        if (server[1].socket > 0 && FD_ISSET(server[1].socket, &rd)) {
-            sock = accept_menu_connection(server + 1);
+        if (server.socket > 0 && FD_ISSET(server.socket, &rd)) {
+            sock = accept_menu_connection(&server);
             if (sock == 0)
                 return;
             if (sock->purpose == InterpWindow) {
